[package]
name = "audioadapter-buffers"
version = "1.0.0"
edition = "2021"
rust-version = "1.74"
authors = ["HEnquist <henrik.enquist@gmail.com>"]
description = "A library for making it easier to work with buffers of audio data"
license = "MIT"
repository = "https://github.com/HEnquist/audioadapter-rs"
keywords = ["audio", "buffer", "dsp", "sample", "pcm"]
categories = ["multimedia::audio"]
readme = "README.md"

[features]
default = ["std"]
std = []

[dependencies]
num-traits = "0.2.15"
audioadapter = { version = "1.0.0", path = "../audioadapter-rs" }
audioadapter-sample = { version = "1.0.0", path = "../audioadapter-sample-rs" }


[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "iteration"
harness = false
